--- a/paginas unidas/html/foro.css
+++ b/paginas unidas/html/foro.css
@@ -70,29 +70,132 @@ a{
 }
 
 
+
+/* foooter */
+
 footer{
     width: 100%;
     background: #202020;
     color: white;   
-    
-}
-
-.container-footer-all{
+  }
+  
+  .container-footer-all{
     width: 100%;
     max-width: 1200px;
     margin: auto;
     padding: 40px;
-}
-
-.container-footer{
+  }
+  
+  .container-body{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .colum1{
+    max-width: 400px;
+  }
+  
+  .colum1 h1{
+    font-size: 22px;
+  }
+  
+  .colum1 p{
+    font-size: 14px;
+    color: #C7C7C7;
+    margin-top: 20px;
+  }
+  
+  .colum2{
+    max-width: 400px;
+    
+  }
+  
+  .colum2 h1{
+    font-size: 22px;
+  }
+  
+  .row {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+  }
+  
+  .row img{
+    width: 50px;
+    height: auto;
+  }
+  
+  .row label{
+    
+    margin-top: -39px;
+    margin-left: 46px;
+    color: #C7C7C7;
+  }
+  
+  
+  .colum3{
+    max-width: 400px;
+  }
+  
+  .colum3 h1{
+    font-size: 22px;
+  }
+  
+  .row2{
+    margin-top: 20px;
+    display: flex;
+  }
+  
+  .row2 img{
+    width: 50px;
+    height: auto;
+  }
+  
+  .row2 label{
+    margin-top: 10px;
+    margin-left: 20px;
+    max-width: 140px;
+  }
+  
+  .container-footer{
     width: 100%;  
     background: #101010;
-}
-
-.footer{
+  }
+  
+  .footer{
     max-width: 1200px;
     margin: auto;
     display: flex;
     justify-content: space-between;  
     padding: 20px;
-}
+  }
+  
+  .copyright{
+    color: #C7C7C7;
+  }
+  
+  .copyright a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
+  
+  .information a{
+    text-decoration: none;
+    color: #C7C7C7;
+  }
+  
+  @media screen and (max-width: 1100px){
+    .container-body{
+        flex-wrap: wrap;
+    }
+    .colum1{
+        max-width: 100%;
+    }
+    .colum2,
+    .colum3{
+        margin-top: 40px;
+    }
+  }
+  /*CODIGO ISAIS TERMINA*/ 
